--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="color"> elemento color cambiante</div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
