Creacion de primer fetch y llamada a archivo JSON ok

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>Pokedex
+    </header>
+    <main>
+      <section id="filtro">
+        <select name="" id="" data-testid="select-filter"></select>
+
+      </section>
+      <section id="root">
+        <ul id="tarjetas">
+          <li></li>
+        </ul>
+      </section>
+    </main>
     <script src="main.js" type="module"></script>
   </body>
 </html>
