--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
           <li></li>
         </ul>
       </section>
-      <div>
+      <div>git 
         <button id="reset-button" data-testid="button-clear" type="button">Limpiar filtros</button>
       </div>
       <section id="root">
