Update index.HTML-Se agrega microdata y adjunta interfaz de filtro

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -19,30 +19,29 @@
           <option value="weight">Peso</option>
           <option value="height">Altura</option>
         </select>
-        <label for=""filterBy>Descendente</label>
-        <input type="radio" name="filterBy" value="Descendente">
-        <label for=""filterBy>Ascendente</label>
-        <input type="radio" name="filterBy" value="Ascendente">
+        <label for="" filterBy>Descendente</label>
+        <input type="radio" name="filterBy" value="Descendente" />
+        <label for="" filterBy>Ascendente</label>
+        <input type="radio" name="filterBy" value="Ascendente" />
         <button id="boton">Mostrar Pokemons</button>
+        <button id="reset-button" data-testid="button-clear" type="button">
+          Limpiar filtros
+        </button>
       </section>
       <section id="root">
         <ul id="tarjetas">
-          <li></li>
-        </ul>
-      </section>
-      <div>git 
-        <button id="reset-button" data-testid="button-clear" type="button">Limpiar filtros</button>
-      </div>
-      <section id="root">
-        <ul>
           <li>
             <dl itemscope itemtype="pokemon">
-              <dt>Nombre:</dt><dd itemprop="name"></dd>
-              <dt>Número:</dt><dd itemprop="num"></dd>
-              <dt>Tipo:</dt><dd itemprop="type"></dd>
-              <dl itemprop="pokemon_size" itemscope itemtype="pokemon"></dl>
-                <dt>Altura:</dt><dd itemprop="height"></dd>
-                <dt>Peso:</dt><dd itemprop="weight"></dd>
+              <dt>Nombre:</dt>
+              <dd itemprop="name"></dd>
+              <dt>Número:</dt>
+              <dd itemprop="num"></dd>
+              <dt>Tipo:</dt>
+              <dd itemprop="type"></dd>
+              <dt>Altura:</dt>
+              <dd itemprop="height"></dd>
+              <dt>Peso:</dt>
+              <dd itemprop="weight"></dd>
             </dl>
           </li>
         </ul>
@@ -50,7 +49,7 @@
     </main>
     <footer>
       <p>By: Katherine Pino & Isadora Vargas</p>
-    </footer>  
+    </footer>
     <script src="main.js" type="module"></script>
   </body>
 </html>
