--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>Pokedex
-    </header>
+    <div class="contenedor-t">
+      <header>
+        <h1>
+          <img src="https://raw.githubusercontent.com/isadora-vargasg/DEV011-data-lovers/main/pokedex-t.png" alt="pokedex-t" class="pokedex-titulo">  
+          <img src="https://raw.githubusercontent.com/isadora-vargasg/DEV011-data-lovers/main/pokedex.png" alt="pokedex-i" class="pokedex-imagen">
+        </h1>
+      </header>
+     </div>
     <main>
-      <section id="filtro">
+      <section class="contenedor-c" id="filtro">
         <select name="" id="" data-testid="select-filter"></select>
-
-      </section>
-      <section id="root">
-        <ul id="tarjetas">
-          <li></li>
-        </ul>
       </section>
     </main>
+    <footer class="contenedor-f">
+      Katherine Pino & Andrea Vargas
+      <img src="https://raw.githubusercontent.com/isadora-vargasg/DEV011-data-lovers/main/612ce4761b9679000402af1c.png" alt="pokemon-logo" class="pokemon-footer">
+    </footer> 
     <script src="main.js" type="module"></script>
   </body>
 </html>
