--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,14 @@
       <header>
           <img src="https://raw.githubusercontent.com/isadora-vargasg/DEV011-data-lovers/main/pokedex-t.png" alt="pokedex-t" class="pokedex-titulo">  
           <img src="https://raw.githubusercontent.com/isadora-vargasg/DEV011-data-lovers/main/pokedex.png" alt="pokedex-i" class="pokedex-imagen">
-      <h1>Pokedex</h1>
-    </header>
+      <h1></h1>
+      </header>
+    </div>
     <main>
+      <div class="contenedor-c">
       <section id="filtro">
         <label for="select-sort">Filtrar por: </label>
-        <select name="" id="select-sort" data-testid="select-sort" class="contenedor-c">
+        <select name="" id="select-sort" data-testid="select-sort" >
           <option value="num">Todos</option>
           <option value="type">Tipo</option>
           <option value="weight">Peso</option>
@@ -53,11 +55,12 @@
           </li>
         </ul>        
       </section>
+      </div>
     </main>
     <footer class="contenedor-f">
       <p>By: Katherine Pino &amp; Isadora Vargas</p>
        <img src="https://raw.githubusercontent.com/isadora-vargasg/DEV011-data-lovers/main/612ce4761b9679000402af1c.png" alt="pokemon-logo" class="pokemon-footer">
-    <script src="main.js" type="module"></script>
     </footer>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
