Tarjetas fase 1, aun falta el diseno

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
     <main>
       <div class="contenedor-c">
         <section id="root">
-          <ul id="tarjetas">
+          <ul class="tarjetas">
             <li itemscope itemtype="pokemon">
               <dt>Nombre:</dt>
               <dd itemprop="name"></dd>
