--- a/src/index.html
+++ b/src/index.html
@@ -79,26 +79,11 @@
             </select>
           </li>
           <li>
-            <label for="select-sort4"></label>
-            <select
-              name="atri-pokemon"
-              id="select-sort4"
-              data-testid="select-sort4">
-              <option value="" disabled selected>Ataque básico</option>
-              <option value="base-attack">Mayor-Menor</option>
-              <option value="base-attack">Menor-Mayor</option>
-            </select>
-          </li>
-          <li>
-            <button id="calculo-stats" data-testid="button-stats" type="button">
-              Ataque Máximo
-            </button>
-          </li>
-          <li>
             <button id="reset-button" data-testid="button-clear" type="button">
               Limpiar
             </button>
           </li>
+          <li id="count-pokemon" class="caja" data-testid="count-pokemon">Pokemones: 251</li>
         </ul>
       </nav>
       <h1></h1>
