continuacion trabajo rama...

--- a/src/index.html
+++ b/src/index.html
@@ -60,11 +60,11 @@
             </select>
           </li>
           <li>
-            <label for="select-sort2"></label>
+            <label for="select-sort"></label>
             <select
               name="atri-pokemon"
-              id="select-sort2"
-              data-testid="select-sort2"
+              id="select-sort"
+              data-testid="select-sort"
             >
               <option value="" disabled selected>Ordenar por: </option>
               <option value="A-Z">A-Z</option>
