--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
               id="select-sort"
               data-testid="select-sort"
             >
-              <option value="" disabled selected>Ordenar por: </option>
+              <option value="default" disabled selected>Ordenar por: </option>
               <option value="A-Z">A-Z</option>
               <option value="Z-A">Z-A</option>
               <option value="asc">Nro asc</option>
