Parte trasera de las trajetas

--- a/src/index.html
+++ b/src/index.html
@@ -41,23 +41,23 @@
               <option value="default" disabled selected>Tipo:</option>
               <option value="all">Todos</option>
               <option value="normal">Normal</option>
-              <option value="fire">Fuego</option>
-              <option value="water">Agua</option>
-              <option value="grass">Planta</option>
-              <option value="electric">Eléctrico</option>
-              <option value="ice">Hielo</option>
-              <option value="fighting">Lucha</option>
-              <option value="poison">Veneno</option>
-              <option value="ground">Tierra</option>
-              <option value="flying">Volador</option>
-              <option value="psychic">Psíquico</option>
-              <option value="bug">Bicho</option>
-              <option value="rock">Roca</option>
-              <option value="ghost">Fantasma</option>
-              <option value="dark">Siniestro</option>
-              <option value="dragon">Dragón</option>
-              <option value="steel">Metal</option>
-              <option value="fairy">Hada</option>
+              <option value="fire">Fire</option>
+              <option value="water">Water</option>
+              <option value="grass">Grass</option>
+              <option value="electric">Electric</option>
+              <option value="ice">Ice</option>
+              <option value="fighting">Fighting</option>
+              <option value="poison">Poison</option>
+              <option value="ground">Ground</option>
+              <option value="flying">Flying</option>
+              <option value="psychic">Psychic</option>
+              <option value="bug">Bug</option>
+              <option value="rock">Rock</option>
+              <option value="ghost">Ghost</option>
+              <option value="dark">Dark</option>
+              <option value="dragon">Dragon</option>
+              <option value="steel">Steel</option>
+              <option value="fairy">Fairy</option>
             </select>
           </li>
           <li>
@@ -74,7 +74,6 @@
               <option value="desc">Nro desc</option>
             </select>
           </li>
-
           <li>
             <button id="reset-button" data-testid="button-clear" type="button">
               Limpiar
@@ -92,16 +91,16 @@
         <section id="root">
           <ul id="tarjetas">
             <li itemscope itemtype="pokemon">
-              <dt>Nombre:</dt>
-              <dd itemprop="name"></dd>
               <dt>Número:</dt>
               <dd itemprop="num"></dd>
+              <dt>Nombre:</dt>
+              <dd itemprop="name"></dd>
               <dt>Tipo:</dt>
               <dd itemprop="type"></dd>
-              <dt>Altura:</dt>
-              <dd itemprop="height"></dd>
-              <dt>Peso:</dt>
-              <dd itemprop="weight"></dd>
+              <dt>Ataque básico:</dt>
+              <dd itemprop="base-attack"></dd>
+              <dt>Defensa base:</dt>
+              <dd itemprop="base-defense"></dd>
             </li>
           </ul>
         </section>
