--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         <ul class="nav-list">
           <li class="none">
             <label for="filter-by"></label>
-            <select name="atri-pokemon" id="filter-by" data-testid="filter-by">
+            <select name="atri-pokemon" id="filter-by" data-testid="select-filter">
 
               <option value="default" disabled selected>Tipo:</option>
               <option value="all">Todos</option>
